--- a/app/src/main/res/drawable/tag_ingredients.xml
+++ b/app/src/main/res/drawable/tag_ingredients.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:width="175dp" android:height="40dp">
+    <item android:height="40dp" android:width="170dp">
         <shape android:shape="rectangle">
             <solid android:color="@color/midOrange" />
             <corners android:radius="5dp" />
