bug fix uploaded hours-minutes

--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -48,7 +48,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="See All"
+                        android:text="see all"
                         android:fontFamily="@font/poppins_medium"
                         android:textAlignment="viewEnd"
                         android:textSize="20sp"
@@ -97,7 +97,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="See All"
+                        android:text="see all"
                         android:fontFamily="@font/poppins_medium"
                         android:textAlignment="viewEnd"
                         android:textSize="20sp"
@@ -147,7 +147,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="See all"
+                        android:text="see all"
                         android:fontFamily="@font/poppins_medium"
                         android:textAlignment="viewEnd"
                         android:textSize="20sp"
