--- a/app/src/main/res/layout/dialog_editname.xml
+++ b/app/src/main/res/layout/dialog_editname.xml
@@ -10,10 +10,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/button_field"
+        android:layout_marginTop="15dp"
+        android:layout_gravity="start"
+        android:layout_marginStart="20dp"
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/userIcon"
+            android:id="@+id/userIconDialog"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginStart="15dp"
@@ -21,10 +24,10 @@
             android:src="@drawable/ic_user" />
 
         <EditText
-            android:id="@+id/editUsername"
+            android:id="@+id/editUsernameDialog"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Enter new username"
+            android:hint="Enter new username         "
             android:layout_weight="1"
             android:fontFamily="@font/poppins_medium"
             android:layout_marginStart="12dp"
