--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -32,16 +32,17 @@
                 android:textColor="@color/purple"
                 android:textSize="25sp" />
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profilePicture"
                 android:layout_width="71dp"
                 android:layout_height="71dp"
                 android:layout_below="@id/myProfile"
                 android:layout_marginEnd="20dp"
-                android:src="@drawable/toolbar_account" />
+                />
+
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/myProfile"
                 android:layout_marginTop="10dp"
@@ -54,18 +55,24 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_medium"
-                    android:text="Username"
+                    android:text=""
                     android:textColor="@color/purple"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    />
 
                 <TextView
                     android:id="@+id/userEmail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_medium"
-                    android:text="Email"
+                    android:text=""
                     android:textColor="@color/purple"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    />
 
             </LinearLayout>
 
