--- a/app/src/main/res/layout/fragment_cook_marked.xml
+++ b/app/src/main/res/layout/fragment_cook_marked.xml
@@ -21,7 +21,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:paddingTop="30dp"
-                android:paddingBottom="20dp"
+                android:paddingBottom="30dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center"
@@ -31,9 +31,10 @@
                     android:id="@+id/searchBarEt"
                     android:layout_width="350dp"
                     android:layout_height="wrap_content"
-                    android:hint="Tahu bulat.."
+                    android:inputType="text"
+                    android:hint="Tahu bulat..."
                     android:fontFamily="@font/poppins_regular"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     android:paddingVertical="5dp"
                     android:paddingHorizontal="20dp"
                     android:textColor="@color/white"
@@ -47,12 +48,13 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center_horizontal"
-                android:layout_marginTop="20dp">
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="90dp">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/cookmarkRecylerView"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_weight="1"
                     android:clipToPadding="false"
                     android:nestedScrollingEnabled="false"
