--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -28,8 +28,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginBottom="10dp"
                     android:orientation="horizontal"
                     android:weightSum="2">
 
@@ -39,7 +39,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Trending Recipes"
-                        android:fontFamily="@font/poppins_medium"
+                        android:fontFamily="@font/poppins_medbold"
                         android:textSize="24sp"
                         android:textColor="@color/white" />
 
@@ -48,10 +48,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="see all"
-                        android:fontFamily="@font/poppins_medium"
+                        android:text="@string/see_all"
+                        android:fontFamily="@font/poppins_regular"
                         android:textAlignment="viewEnd"
-                        android:textSize="20sp"
+                        android:textSize="16sp"
                         android:textColor="@color/white" />
 
                 </LinearLayout>
@@ -59,7 +59,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/cardView1"
                     android:layout_width="match_parent"
-                    android:layout_height="235dp"
+                    android:layout_height="0dp"
                     android:layout_weight="1"
                     android:paddingHorizontal="5dp"
                     android:clipToPadding="false"
@@ -76,9 +76,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginVertical="10dp"
                     android:orientation="horizontal"
                     android:weightSum="2">
 
@@ -88,7 +87,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Quick Cook"
-                        android:fontFamily="@font/poppins_medium"
+                        android:fontFamily="@font/poppins_medbold"
                         android:textSize="24sp"
                         android:textColor="@color/purple" />
 
@@ -97,10 +96,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="see all"
-                        android:fontFamily="@font/poppins_medium"
+                        android:text="@string/see_all"
+                        android:fontFamily="@font/poppins_regular"
                         android:textAlignment="viewEnd"
-                        android:textSize="20sp"
+                        android:textSize="16sp"
                         android:textColor="@color/purple" />
 
                 </LinearLayout>
@@ -108,7 +107,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/cardView2"
                     android:layout_width="match_parent"
-                    android:layout_height="235dp"
+                    android:layout_height="0dp"
                     android:layout_weight="1"
                     android:paddingHorizontal="5dp"
                     android:clipToPadding="false"
@@ -121,14 +120,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginBottom="75dp">
+                android:layout_marginBottom="90dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginVertical="10dp"
                     android:orientation="horizontal"
                     android:weightSum="2">
 
@@ -138,7 +136,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="You might like"
-                        android:fontFamily="@font/poppins_medium"
+                        android:fontFamily="@font/poppins_medbold"
                         android:textSize="24sp"
                         android:textColor="@color/purple" />
 
@@ -147,10 +145,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="see all"
-                        android:fontFamily="@font/poppins_medium"
+                        android:text="@string/see_all"
+                        android:fontFamily="@font/poppins_regular"
                         android:textAlignment="viewEnd"
-                        android:textSize="20sp"
+                        android:textSize="16sp"
                         android:textColor="@color/purple" />
 
                 </LinearLayout>
@@ -158,7 +156,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/cardView3"
                     android:layout_width="match_parent"
-                    android:layout_height="235dp"
+                    android:layout_height="0dp"
                     android:layout_weight="1"
                     android:paddingHorizontal="5dp"
                     android:clipToPadding="false"
@@ -166,6 +164,7 @@
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
             </LinearLayout>
+
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
