--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -24,7 +24,7 @@
             android:textColor="@color/white"
             android:textAlignment="center"
             android:layout_marginTop="38dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="16dp"
             />
 
         <!-- Search bar -->
@@ -38,7 +38,7 @@
             android:padding="8dp"
             android:layout_marginEnd="48dp"
             android:layout_marginStart="48dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginBottom="22dp"
             android:outlineProvider="background"
             android:backgroundTint="@android:color/white"
             android:drawableLeft="@drawable/ic_search"
@@ -47,8 +47,7 @@
             android:queryBackground="@android:color/transparent"
             />
 
-        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -74,7 +73,7 @@
                         android:fontFamily="@font/poppins_medium"
                         android:textSize="24sp"
                         android:textColor="@color/purple"
-                        android:gravity="left"
+                        android:gravity="start"
                         android:layout_marginTop="38dp"
                         android:layout_marginBottom="20dp"
                         />
@@ -82,7 +81,7 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rvIngredientsData1"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:layout_weight="1" />
 
                 </LinearLayout>
@@ -101,7 +100,7 @@
                         android:layout_marginTop="38dp"
                         android:layout_marginBottom="20dp"
                         android:fontFamily="@font/poppins_medium"
-                        android:gravity="left"
+                        android:gravity="start"
                         android:text="Meat"
                         android:textColor="@color/purple"
                         android:textSize="24sp" />
@@ -109,7 +108,7 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rvIngredientsData2"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:layout_weight="1" />
 
                 </LinearLayout>
@@ -129,7 +128,7 @@
                         android:fontFamily="@font/poppins_medium"
                         android:textSize="24sp"
                         android:textColor="@color/purple"
-                        android:gravity="left"
+                        android:gravity="start"
                         android:layout_marginTop="38dp"
                         android:layout_marginBottom="20dp"
                         />
@@ -137,7 +136,7 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rvIngredientsData3"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:layout_weight="1" />
 
                 </LinearLayout>
@@ -157,7 +156,7 @@
                         android:fontFamily="@font/poppins_medium"
                         android:textSize="24sp"
                         android:textColor="@color/purple"
-                        android:gravity="left"
+                        android:gravity="start"
                         android:layout_marginTop="38dp"
                         android:layout_marginBottom="20dp"
                         />
@@ -165,7 +164,7 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rvIngredientsData4"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:layout_weight="1" />
 
                 </LinearLayout>
@@ -174,6 +173,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
+                    android:layout_marginBottom="90dp"
                     android:layout_marginLeft="21dp"
                     android:layout_marginRight="21dp">
 
@@ -185,7 +185,7 @@
                         android:fontFamily="@font/poppins_medium"
                         android:textSize="24sp"
                         android:textColor="@color/purple"
-                        android:gravity="left"
+                        android:gravity="start"
                         android:layout_marginTop="38dp"
                         android:layout_marginBottom="20dp"
                         />
@@ -193,7 +193,7 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rvIngredientsData5"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:layout_weight="1" />
 
                 </LinearLayout>
