--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="40dp"
+        android:padding="32dp"
         tools:context=".UploadFragment">
 
         <!-- TODO: Update blank fragment layout -->
@@ -191,9 +191,8 @@
             android:id="@+id/spinnerOptions"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
             android:background="@drawable/button_field"
-            android:paddingLeft="10sp"
+            android:paddingStart="10sp"
             />
 
         <!-- Servings -->
