--- a/app/src/main/res/layout/activity_manage_recipe.xml
+++ b/app/src/main/res/layout/activity_manage_recipe.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ManageRecipe">
+    tools:context=".activity.ManageRecipeActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/detail_toolbar"
@@ -37,7 +37,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewRecipe"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_margin="8dp"
         android:clipToPadding="false"
