--- a/app/src/main/res/layout/fragment_plan.xml
+++ b/app/src/main/res/layout/fragment_plan.xml
@@ -49,6 +49,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="My Meal Plan For"
+                        android:textColor="@color/purple"
                         android:fontFamily="@font/poppins_medbold"
                         android:textSize="24dp"/>
 
@@ -57,6 +58,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text=""
+                        android:textColor="@color/purple"
                         android:fontFamily="@font/poppins_medbold"
                         android:textSize="16dp"/>
                 </LinearLayout>
