--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -59,12 +59,13 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/cardView1"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="235dp"
                     android:layout_weight="1"
                     android:paddingHorizontal="5dp"
                     android:clipToPadding="false"
                     android:nestedScrollingEnabled="false"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:ignore="InefficientWeight" />
 
             </LinearLayout>
 
@@ -107,12 +108,13 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/cardView2"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="235dp"
                     android:layout_weight="1"
                     android:paddingHorizontal="5dp"
                     android:clipToPadding="false"
                     android:nestedScrollingEnabled="false"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:ignore="InefficientWeight" />
 
             </LinearLayout>
 
@@ -156,12 +158,13 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/cardView3"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="235dp"
                     android:layout_weight="1"
                     android:paddingHorizontal="5dp"
                     android:clipToPadding="false"
                     android:nestedScrollingEnabled="false"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:ignore="InefficientWeight" />
 
             </LinearLayout>
 
