--- a/app/src/main/res/layout/item_tag.xml
+++ b/app/src/main/res/layout/item_tag.xml
@@ -1,37 +1,29 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/tagLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="0dp"
     android:layout_margin="8dp">
-
-    <ImageView
-        android:id="@+id/ingredient_tag_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/tag_ingredients"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tag_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/midOrange"
         android:fontFamily="@font/poppins_medium"
         android:text="Garlic"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="16sp"
+        android:textSize="15sp"
         android:ellipsize="end"
         android:maxLines="1"
-        app:layout_constraintWidth_max="155dp"
-        app:layout_constraintBottom_toBottomOf="@id/ingredient_tag_iv"
-        app:layout_constraintEnd_toEndOf="@id/ingredient_tag_iv"
-        app:layout_constraintStart_toStartOf="@id/ingredient_tag_iv"
-        app:layout_constraintTop_toTopOf="@id/ingredient_tag_iv"
+        android:paddingHorizontal="7dp"
+        android:paddingVertical="10dp"
+        app:layout_constraintWidth_max="235dp"
         app:layout_constraintVertical_bias="0.5"
         app:layout_constraintHorizontal_bias="0.5" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.cardview.widget.CardView>
