search functionality done

--- a/app/src/main/res/layout/activity_searchresult.xml
+++ b/app/src/main/res/layout/activity_searchresult.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -33,6 +34,25 @@
             android:maxLines="1"
             android:text="Manage Recipe"/>
     </androidx.appcompat.widget.Toolbar>
+    <!-- Search bar -->
+    <android.widget.SearchView
+        android:id="@+id/recipeSearchBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:queryHint="Search Recipe"
+        android:background="@drawable/background_searchbar"
+        android:layout_gravity="top"
+        android:padding="8dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="8dp"
+        android:outlineProvider="background"
+        android:backgroundTint="@android:color/white"
+        android:drawableLeft="@drawable/ic_search"
+        android:drawablePadding="10dp"
+        android:iconifiedByDefault="false"
+        android:queryBackground="@android:color/transparent"
+        />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -50,13 +70,22 @@
     </ScrollView>
 
 <!--    untuk add ingredient-->
-    <Button
+
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/addIngredientBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="155dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:background="@drawable/button_addingredient"
+        android:fontFamily="@font/poppins_medium"
+        android:text="+"
+        android:textAlignment="center"
+        android:textAllCaps="false"
         android:textColor="@color/orange"
-        android:background="@drawable/background_orangeborderbtn"
-        android:text="+" />
+        android:textSize="20sp"
+        app:backgroundTint="@color/white"
+        app:backgroundTintMode="multiply" />
 
     <ScrollView
         android:layout_width="match_parent"
