--- a/app/src/main/res/drawable/button_addingredient.xml
+++ b/app/src/main/res/drawable/button_addingredient.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners android:radius="20dp" />
-    <stroke android:width="2dp"
-        android:color="@color/orange" />
-    <solid android:color="@android:color/transparent" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <corners android:radius="10dp"></corners>
+    <stroke android:color="@color/orange" android:width="2dp"></stroke>
+    <solid android:color="@color/white"></solid>
 </shape>
