--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -24,7 +24,7 @@
             android:textColor="@color/white"
             android:textAlignment="center"
             android:layout_marginTop="38dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="20dp"
             />
 
         <!-- Search bar -->
@@ -38,7 +38,7 @@
             android:padding="8dp"
             android:layout_marginEnd="48dp"
             android:layout_marginStart="48dp"
-            android:layout_marginBottom="22dp"
+            android:layout_marginTop="8dp"
             android:outlineProvider="background"
             android:backgroundTint="@android:color/white"
             android:drawableLeft="@drawable/ic_search"
@@ -47,7 +47,19 @@
             android:queryBackground="@android:color/transparent"
             />
 
-        <ScrollView
+        <TextView
+            android:id="@+id/buttonSeeSelected"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:focusable="true"
+            android:fontFamily="@font/poppins_medium"
+            android:text="See Selected Ingredients"
+            android:textColor="@color/purple"
+            android:textSize="14sp" />
+
+        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -73,7 +85,7 @@
                         android:fontFamily="@font/poppins_medium"
                         android:textSize="24sp"
                         android:textColor="@color/purple"
-                        android:gravity="start"
+                        android:gravity="left"
                         android:layout_marginTop="38dp"
                         android:layout_marginBottom="20dp"
                         />
@@ -81,7 +93,7 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rvIngredientsData1"
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1" />
 
                 </LinearLayout>
@@ -100,7 +112,7 @@
                         android:layout_marginTop="38dp"
                         android:layout_marginBottom="20dp"
                         android:fontFamily="@font/poppins_medium"
-                        android:gravity="start"
+                        android:gravity="left"
                         android:text="Meat"
                         android:textColor="@color/purple"
                         android:textSize="24sp" />
@@ -108,7 +120,7 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rvIngredientsData2"
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1" />
 
                 </LinearLayout>
@@ -128,7 +140,7 @@
                         android:fontFamily="@font/poppins_medium"
                         android:textSize="24sp"
                         android:textColor="@color/purple"
-                        android:gravity="start"
+                        android:gravity="left"
                         android:layout_marginTop="38dp"
                         android:layout_marginBottom="20dp"
                         />
@@ -136,7 +148,7 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rvIngredientsData3"
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1" />
 
                 </LinearLayout>
@@ -156,7 +168,7 @@
                         android:fontFamily="@font/poppins_medium"
                         android:textSize="24sp"
                         android:textColor="@color/purple"
-                        android:gravity="start"
+                        android:gravity="left"
                         android:layout_marginTop="38dp"
                         android:layout_marginBottom="20dp"
                         />
@@ -164,7 +176,7 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rvIngredientsData4"
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1" />
 
                 </LinearLayout>
@@ -173,7 +185,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginBottom="90dp"
                     android:layout_marginLeft="21dp"
                     android:layout_marginRight="21dp">
 
@@ -185,7 +196,7 @@
                         android:fontFamily="@font/poppins_medium"
                         android:textSize="24sp"
                         android:textColor="@color/purple"
-                        android:gravity="start"
+                        android:gravity="left"
                         android:layout_marginTop="38dp"
                         android:layout_marginBottom="20dp"
                         />
@@ -193,7 +204,7 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rvIngredientsData5"
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1" />
 
                 </LinearLayout>
