--- a/app/src/main/res/drawable/background_searchbar.xml
+++ b/app/src/main/res/drawable/background_searchbar.xml
@@ -4,7 +4,8 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/white" />
-            <corners android:radius="9dp" />
+            <corners android:radius="5dp" />
+            <stroke android:color="@color/greyHint" android:width="3.5dp"></stroke>
         </shape>
     </item>
 
@@ -12,7 +13,7 @@
     <item android:left="5dp" android:right="5dp" android:top="5dp" android:bottom="5dp">
         <shape android:shape="rectangle">
             <solid android:color="@color/white" />
-            <corners android:radius="8.768px" />
+            <corners android:radius="10px" />
         </shape>
     </item>
 </layer-list>
