--- a/app/src/main/res/layout/manage_recipe_item.xml
+++ b/app/src/main/res/layout/manage_recipe_item.xml
@@ -42,11 +42,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Recipe Name"
+            android:textColor="@color/purple"
             android:textSize="16sp"
             android:textStyle="bold"
             android:fontFamily="@font/poppins_medium"
-
-            />
+            android:ellipsize="end"
+            android:maxLines="1" />
 
         <!-- Recipe Type -->
         <TextView
@@ -59,17 +60,17 @@
             android:background="@drawable/button_field"
             android:backgroundTint="@color/orange"
             android:textColor="@color/white"
-            android:paddingLeft="5sp"
-            android:paddingRight="5sp"
-            android:paddingTop="2sp"
-            android:paddingBottom="2sp"/>
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"/>
 
         <!-- Cookmark -->
         <TextView
             android:id="@+id/cookmarkCount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="_ cookmarked"
+            android:text="_ Cookmarked"
             android:textSize="14sp"
             android:fontFamily="@font/poppins_medium"
             android:layout_marginTop="2sp"
