--- a/app/src/main/res/layout/activity_searchresult.xml
+++ b/app/src/main/res/layout/activity_searchresult.xml
@@ -77,6 +77,7 @@
     </RelativeLayout>
 
     <ScrollView
+        android:id="@+id/ingreScrollView"
         android:layout_width="match_parent"
         android:layout_height="125dp"
         android:layout_marginBottom="10dp">
